fix: add paddings to blockquotes on mobile

--- a/src/less/_page.less
+++ b/src/less/_page.less
@@ -100,10 +100,10 @@ footer {
 
 blockquote {
   margin: 2.5rem 0;
+  padding: 0 var(--spacing) 0 1rem;
 
   @media (min-width: @breakpoints__desktop--start) {
     margin: 3rem 0;
-    padding: 0 2rem 0 1rem;
   }
 
   p {
